welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:3: error: illegal start of declaration
    if(litMessage()="R"){
    ^BDRBuggle:8: error: illegal start of declaration
    if(litMessage()="L"){
    ^BDRBuggle:12: error: illegal start of declaration
    if(litMessage()="I"){
    ^BDRBuggle:16: error: illegal start of declaration
     if(litMessage()="A"){
     ^BDRBuggle:19: error: illegal start of declaration
     if(litMessage()="B"){
     ^BDRBuggle:23: error: illegal start of declaration
     if(litMessage()="C"){
     ^BDRBuggle:28: error: illegal start of declaration
     if(litMessage()="Z"){
     ^BDRBuggle:31: error: illegal start of declaration
     if(litMessage()="Y"){
     ^BDRBuggle:35: error: illegal start of declaration
     if(litMessage()="X"){
     ^